updated v1 - change title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
   <header>
-    <h1>Nearest Mosque Locator</h1>
+    <h4>“Salat in congregation is twenty-seven times more meritorious than a Salat performed individually.”</h4>
+    <pre>Sahih Muslim (1504)</pre>
   </header>
   <main>
     <button id="getLocationBtn">Find Nearest Mosques</button>
