updated v1 - add footnote

--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
     <div id="map"></div>
     <ul id="mosque-list"></ul>
   </main>
+  <footer>
+    <p>by: <a href="mailto:armanot@gmail.com">armanot@gmail.com</a></p>
+  </footer>
+  
 </body>
 </html>
